tools/odataUri/src/parsers/ODataUriQueryParser.js
"use strict";
// Generated from src/js/odata-uri/parsers/ODataUriQuery.g4 by ANTLR 4.9.0-SNAPSHOT
var __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    Object.defineProperty(o, k2, { enumerable: true, get: function() { return m[k]; } });
}) : (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    o[k2] = m[k];
}));
var __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {
    Object.defineProperty(o, "default", { enumerable: true, value: v });
}) : function(o, v) {
    o["default"] = v;
});
var __importStar = (this && this.__importStar) || function (mod) {
    if (mod && mod.__esModule) return mod;
    var result = {};
    if (mod != null) for (var k in mod) if (k !== "default" && Object.prototype.hasOwnProperty.call(mod, k)) __createBinding(result, mod, k);
    __setModuleDefault(result, mod);
    return result;
};
Object.defineProperty(exports, "__esModule", { value: true });
exports.IdentifierContext = exports.CompOperatorContext = exports.ParenExpressionContext = exports.BasicExpressionContext = exports.CompExpressionContext = exports.AndExpressionContext = exports.OrExpressionContext = exports.ExpressionContext = exports.OrderFieldContext = exports.OrderSpecContext = exports.ExpandFieldContext = exports.SelectFieldContext = exports.ExpandFieldListContext = exports.SelectFieldListContext = exports.SkipOptionContext = exports.TopOptionContext = exports.OrderByOptionContext = exports.ExpandOptionContext = exports.SelectOptionContext = exports.FilterOptionContext = exports.QueryOptionContext = exports.QueryOptionsListContext = exports.QueryOptionsContext = exports.ODataUriQueryParser = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = __importStar(require("antlr4ts/misc/Utils"));
class ODataUriQueryParser extends Parser_1.Parser {
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(ODataUriQueryParser._ATN, this);
    }
    // @Override
    // @NotNull
    get vocabulary() {
        return ODataUriQueryParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "ODataUriQuery.g4"; }
    // @Override
    get ruleNames() { return ODataUriQueryParser.ruleNames; }
    // @Override
    get serializedATN() { return ODataUriQueryParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    // @RuleVersion(0)
    queryOptions() {
        let _localctx = new QueryOptionsContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, ODataUriQueryParser.RULE_queryOptions);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 46;
                this.queryOption();
                this.state = 47;
                this.queryOptionsList();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    queryOptionsList() {
        let _localctx = new QueryOptionsListContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, ODataUriQueryParser.RULE_queryOptionsList);
        try {
            this.state = 54;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case ODataUriQueryParser.AMP:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 49;
                        this.match(ODataUriQueryParser.AMP);
                        this.state = 50;
                        this.queryOption();
                        this.state = 51;
                        this.queryOptionsList();
                    }
                    break;
                case ODataUriQueryParser.EOF:
                    this.enterOuterAlt(_localctx, 2);
                    // tslint:disable-next-line:no-empty
                    {
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    queryOption() {
        let _localctx = new QueryOptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, ODataUriQueryParser.RULE_queryOption);
        try {
            this.state = 62;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case ODataUriQueryParser.FILTER:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 56;
                        this.filterOption();
                    }
                    break;
                case ODataUriQueryParser.SELECT:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 57;
                        this.selectOption();
                    }
                    break;
                case ODataUriQueryParser.EXPAND:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 58;
                        this.expandOption();
                    }
                    break;
                case ODataUriQueryParser.ORDERBY:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 59;
                        this.orderByOption();
                    }
                    break;
                case ODataUriQueryParser.TOP:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 60;
                        this.topOption();
                    }
                    break;
                case ODataUriQueryParser.SKIPKW:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 61;
                        this.skipOption();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    filterOption() {
        let _localctx = new FilterOptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, ODataUriQueryParser.RULE_filterOption);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 64;
                this.match(ODataUriQueryParser.FILTER);
                this.state = 65;
                this.match(ODataUriQueryParser.ASSIGN);
                this.state = 66;
                this.expression();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    selectOption() {
        let _localctx = new SelectOptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, ODataUriQueryParser.RULE_selectOption);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 68;
                this.match(ODataUriQueryParser.SELECT);
                this.state = 69;
                this.match(ODataUriQueryParser.ASSIGN);
                this.state = 70;
                this.selectFieldList();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    expandOption() {
        let _localctx = new ExpandOptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, ODataUriQueryParser.RULE_expandOption);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 72;
                this.match(ODataUriQueryParser.EXPAND);
                this.state = 73;
                this.match(ODataUriQueryParser.ASSIGN);
                this.state = 74;
                this.expandFieldList();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    orderByOption() {
        let _localctx = new OrderByOptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, ODataUriQueryParser.RULE_orderByOption);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 76;
                this.match(ODataUriQueryParser.ORDERBY);
                this.state = 77;
                this.match(ODataUriQueryParser.ASSIGN);
                this.state = 78;
                this.orderSpec();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    topOption() {
        let _localctx = new TopOptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, ODataUriQueryParser.RULE_topOption);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 80;
                this.match(ODataUriQueryParser.TOP);
                this.state = 81;
                this.match(ODataUriQueryParser.ASSIGN);
                this.state = 82;
                this.match(ODataUriQueryParser.NUMBER);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    skipOption() {
        let _localctx = new SkipOptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, ODataUriQueryParser.RULE_skipOption);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 84;
                this.match(ODataUriQueryParser.SKIPKW);
                this.state = 85;
                this.match(ODataUriQueryParser.ASSIGN);
                this.state = 86;
                this.match(ODataUriQueryParser.NUMBER);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    selectFieldList() {
        let _localctx = new SelectFieldListContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, ODataUriQueryParser.RULE_selectFieldList);
        try {
            this.state = 93;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 2, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 88;
                        this.selectField();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 89;
                        this.selectField();
                        this.state = 90;
                        this.match(ODataUriQueryParser.COMMA);
                        this.state = 91;
                        this.selectFieldList();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    expandFieldList() {
        let _localctx = new ExpandFieldListContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, ODataUriQueryParser.RULE_expandFieldList);
        try {
            this.state = 100;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 3, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 95;
                        this.expandField();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 96;
                        this.expandField();
                        this.state = 97;
                        this.match(ODataUriQueryParser.COMMA);
                        this.state = 98;
                        this.expandFieldList();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    selectField() {
        let _localctx = new SelectFieldContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, ODataUriQueryParser.RULE_selectField);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 102;
                this.identifier();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    expandField() {
        let _localctx = new ExpandFieldContext(this._ctx, this.state);
        this.enterRule(_localctx, 24, ODataUriQueryParser.RULE_expandField);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 104;
                this.identifier();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    orderSpec() {
        let _localctx = new OrderSpecContext(this._ctx, this.state);
        this.enterRule(_localctx, 26, ODataUriQueryParser.RULE_orderSpec);
        try {
            this.state = 110;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 4, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 106;
                        this.orderField();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 107;
                        this.orderField();
                        this.state = 108;
                        this.match(ODataUriQueryParser.DESC);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    orderField() {
        let _localctx = new OrderFieldContext(this._ctx, this.state);
        this.enterRule(_localctx, 28, ODataUriQueryParser.RULE_orderField);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 112;
                this.identifier();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    expression() {
        let _localctx = new ExpressionContext(this._ctx, this.state);
        this.enterRule(_localctx, 30, ODataUriQueryParser.RULE_expression);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 114;
                this.orExpression(0);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    orExpression(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        let _parentctx = this._ctx;
        let _parentState = this.state;
        let _localctx = new OrExpressionContext(this._ctx, _parentState);
        let _prevctx = _localctx;
        let _startState = 32;
        this.enterRecursionRule(_localctx, 32, ODataUriQueryParser.RULE_orExpression, _p);
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                {
                    this.state = 117;
                    this.andExpression(0);
                }
                this._ctx._stop = this._input.tryLT(-1);
                this.state = 124;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        if (this._parseListeners != null) {
                            this.triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new OrExpressionContext(_parentctx, _parentState);
                                this.pushNewRecursionContext(_localctx, _startState, ODataUriQueryParser.RULE_orExpression);
                                this.state = 119;
                                if (!(this.precpred(this._ctx, 1))) {
                                    throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
                                }
                                this.state = 120;
                                this.match(ODataUriQueryParser.OR);
                                this.state = 121;
                                this.andExpression(0);
                            }
                        }
                    }
                    this.state = 126;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }
    // @RuleVersion(0)
    andExpression(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        let _parentctx = this._ctx;
        let _parentState = this.state;
        let _localctx = new AndExpressionContext(this._ctx, _parentState);
        let _prevctx = _localctx;
        let _startState = 34;
        this.enterRecursionRule(_localctx, 34, ODataUriQueryParser.RULE_andExpression, _p);
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                {
                    this.state = 128;
                    this.compExpression(0);
                }
                this._ctx._stop = this._input.tryLT(-1);
                this.state = 135;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        if (this._parseListeners != null) {
                            this.triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new AndExpressionContext(_parentctx, _parentState);
                                this.pushNewRecursionContext(_localctx, _startState, ODataUriQueryParser.RULE_andExpression);
                                this.state = 130;
                                if (!(this.precpred(this._ctx, 1))) {
                                    throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
                                }
                                this.state = 131;
                                this.match(ODataUriQueryParser.AND);
                                this.state = 132;
                                this.compExpression(0);
                            }
                        }
                    }
                    this.state = 137;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }
    // @RuleVersion(0)
    compExpression(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        let _parentctx = this._ctx;
        let _parentState = this.state;
        let _localctx = new CompExpressionContext(this._ctx, _parentState);
        let _prevctx = _localctx;
        let _startState = 36;
        this.enterRecursionRule(_localctx, 36, ODataUriQueryParser.RULE_compExpression, _p);
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                {
                    this.state = 139;
                    this.basicExpression();
                }
                this._ctx._stop = this._input.tryLT(-1);
                this.state = 147;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        if (this._parseListeners != null) {
                            this.triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new CompExpressionContext(_parentctx, _parentState);
                                this.pushNewRecursionContext(_localctx, _startState, ODataUriQueryParser.RULE_compExpression);
                                this.state = 141;
                                if (!(this.precpred(this._ctx, 1))) {
                                    throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
                                }
                                this.state = 142;
                                this.compOperator();
                                this.state = 143;
                                this.basicExpression();
                            }
                        }
                    }
                    this.state = 149;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }
    // @RuleVersion(0)
    basicExpression() {
        let _localctx = new BasicExpressionContext(this._ctx, this.state);
        this.enterRule(_localctx, 38, ODataUriQueryParser.RULE_basicExpression);
        try {
            this.state = 155;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case ODataUriQueryParser.NUMBER:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 150;
                        this.match(ODataUriQueryParser.NUMBER);
                    }
                    break;
                case ODataUriQueryParser.STRING:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 151;
                        this.match(ODataUriQueryParser.STRING);
                    }
                    break;
                case ODataUriQueryParser.BOOLEAN:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 152;
                        this.match(ODataUriQueryParser.BOOLEAN);
                    }
                    break;
                case ODataUriQueryParser.ID:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 153;
                        this.identifier();
                    }
                    break;
                case ODataUriQueryParser.LPAREN:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 154;
                        this.parenExpression();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    parenExpression() {
        let _localctx = new ParenExpressionContext(this._ctx, this.state);
        this.enterRule(_localctx, 40, ODataUriQueryParser.RULE_parenExpression);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 157;
                this.match(ODataUriQueryParser.LPAREN);
                this.state = 158;
                this.expression();
                this.state = 159;
                this.match(ODataUriQueryParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    compOperator() {
        let _localctx = new CompOperatorContext(this._ctx, this.state);
        this.enterRule(_localctx, 42, ODataUriQueryParser.RULE_compOperator);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 161;
                _la = this._input.LA(1);
                if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ODataUriQueryParser.EQ) | (1 << ODataUriQueryParser.NEQ) | (1 << ODataUriQueryParser.GT) | (1 << ODataUriQueryParser.GTE) | (1 << ODataUriQueryParser.LT) | (1 << ODataUriQueryParser.LTE))) !== 0))) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    identifier() {
        let _localctx = new IdentifierContext(this._ctx, this.state);
        this.enterRule(_localctx, 44, ODataUriQueryParser.RULE_identifier);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 163;
